--- a/Diploma/Diploma.csproj
+++ b/Diploma/Diploma.csproj
@@ -88,7 +88,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BSplineSurfaceBuilder.cs" />
     <Compile Include="Commands.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="GeometryCreator.cs" />
     <Compile Include="ModelManager.cs" />
     <Compile Include="WireframeGenerator.cs" />
